--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
   "bugs": {
     "url": "https://github.com/nishisuke/me/issues"
   },
-  "homepage": "https://github.com/nishisuke/me#readme"
+  "homepage": "https://github.com/nishisuke/me#readme",
+  "devDependencies": {
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.0"
+  }
 }
