--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nishisukeme",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "private": true,
   "directories": {
     "doc": "docs"
   },
