--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "dev": "webpack-dev-server --env.PORT=$PORT --env.DIST=$DIST",
+    "build": "webpack --mode=production --env.DIST=$DIST",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
