--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '2'
 services:
-  npm:
+  npmrun:
     build: .
-    command: npm run dev
+    entrypoint: npm run
     ports:
      - 8080:8080
     volumes:
