--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.3.1"
+  },
+  "dependencies": {
+    "bulma": "^0.7.5"
   }
 }
